# browser-video-capture-rs

./: Cargo.toml  README.md
src/: _2d.rs  d2.rs  gl.rs  html_2d.rs  lib.rs  macros.rs  offscreen_2d.rs  utils.rs
src/glsl/: clip.vert  llla.frag  rgba.frag  rgbl.frag
tests/: web.rs
