[package]
name = "browser-video-capture"
version = "0.1.0"
authors = ["Rostyslav Bohomaz <rostyslav.db@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
offscreen-2d = [
    "web-sys/ImageData",
    "web-sys/OffscreenCanvas",
    "web-sys/OffscreenCanvasRenderingContext2d",
]
html-2d = [
    "web-sys/ImageData",
    "web-sys/HtmlCanvasElement",
    "web-sys/CanvasRenderingContext2d",
]
image = ["dep:image"]

[dependencies]
web-sys = { version = "0.3.69", features = ["HtmlVideoElement"] }
image = { version = "0.25.2", default-features = false, optional = true }

[dev-dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-test = "0.3.34"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MediaStream",
    "MediaStreamTrack"
] }
gloo = { version = "0.11.0", default-features = false, features = [
    "utils",
    "console"
] }
console_error_panic_hook = "0.1.7"
image = { version = "0.25.2", default-features = false }
